--- a/Suggestunes/src/app/playlists/create-playlist/create-playlist-modal/create-playlist-modal.component.html
+++ b/Suggestunes/src/app/playlists/create-playlist/create-playlist-modal/create-playlist-modal.component.html
@@ -1,4 +1,5 @@
-<div class="modal fade" data-bs-backdrop = "static" id="createPlaylistModal" tabindex="-1" aria-labelledby="createPlaylistModal" aria-hidden="true">
+
+<div class="modal fade" id = "popup" data-bs-backdrop = "static" id="createPlaylistModal" tabindex="-1" aria-labelledby="createPlaylistModal" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -22,8 +23,8 @@
           </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn" (click)="clear($event)" data-bs-dismiss="modal">Cancel</button>
-        <button type="sub" class="btn" data-bs-dismiss="modal">Create Playlist</button>
+        <button type="button" id="close" class="btn" (click)="clear($event)" data-bs-dismiss="modal">Cancel</button>
+        <button type="sub" class="btn">Create Playlist</button>
       </div>
       </form>
     </div>
