--- a/Suggestunes/src/app/playlists/playlist/playlist.component.css
+++ b/Suggestunes/src/app/playlists/playlist/playlist.component.css
@@ -1,10 +1,11 @@
 .header.container-fluid
 {
+margin-top: 100px;
+padding: 0;
 z-index: 0;
 position: absolute;
 height: 300px;
-background-image: linear-gradient(white, #333333);
-padding: 0;
+background-color: #1E1E1E!important;
 }
 .music-img.rounded.float-start
 {
@@ -31,7 +32,7 @@ margin-top: 75px;
 .playlist-title
 {
 box-sizing: border-box;
-color:rgb(26,26,26);
+color:#552d63;
 display: block;
 font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 font-size: 50px;
@@ -47,7 +48,7 @@ text-transform: uppercase;
 .playlist-description
 {
 box-sizing: border-box;
-color:rgb(26,26,26);
+color:#552d63;
 display: block;
 font-family:Arial, Helvetica, sans-serif;
 font-size: 20px;
@@ -61,9 +62,10 @@ text-align: center;
 }
 .body.container-fluid
 {
-padding-top: 300px;
+padding-top: 400px;
 height: 1100px;
-background-color: #333333;
+background-color: #1E1E1E!important;
+
 }
 .form-label{
 padding-left: 54px;
