--- a/Suggestunes/src/app/playlists/playlist/playlist.component.css
+++ b/Suggestunes/src/app/playlists/playlist/playlist.component.css
@@ -84,11 +84,25 @@ height: 25px;
 color: #66318D;
 }
 .form-control{
-margin-left: 50px;
-margin-top:35px;
+margin-top:10px;
 width: 300px;
 background-color: #4B4B4B;
 color: white;
 border-color: #66318D;
 border-width: 2px;
+}
+.search.button{
+    margin-top: 15px;
+    background-color:  #66318D;
+    display:block;
+    color:white; 
+    border-radius: 4px;
+    border: none;
+    font-size: 17px;
+}
+.search.button:hover{
+    transform:scale(1.02);
+}
+.search.button:active{
+    background-color: #3e1d54;
 }
