--- a/Suggestunes/src/app/layouts/playlist-home-layout/playlist-home-layout.component.html
+++ b/Suggestunes/src/app/layouts/playlist-home-layout/playlist-home-layout.component.html
@@ -8,11 +8,12 @@
       <span *ngIf="show"  style="border:none;"><a *ngFor="let item of getEntries()" href="/playlists/playlist/false/{{item[0]}}" class = "list-group-item"> <img alt = "default image" src = "{{item[1].image}}"><p>{{item[1].name}}</p></a></span>
     </div>
   </div>
+  <span *ngIf="has_spotify">
   <div class="d-flex justify-content-center">
-  <div *ngIf="has_spotify"> <div id="spotify_container" class="list-group list-group-flush text-md-start" >
+    <div id="spotify_container" class="list-group list-group-flush text-md-start" >
     <h5>Imported Playlists</h5>
     <span *ngIf="show"  style="border:none;"><a *ngFor="let item of getSpotifyEntries()" href="/playlists/playlist/true/{{item[0]}}" class = "list-group-item"> <img alt = "default image" src = "{{item[1].image}}"><p>{{item[1].name}}</p></a></span>
   </div>
   </div>
-  </div>
+  </span>
 </div>
